--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -3,6 +3,12 @@ ja:
     login: 'ログイン'
     register: 'ユーザー登録'
     logout: 'ログアウト'
+    Engineer: 'エンジニア'
+    Gamer: 'ゲーマー'
+    Video Creator: '動画クリエイター'
+  top:
+    index:
+      New Arrival: '新着'
   users:
     new:
       title: 'ユーザー登録'
