Add: i18nで日時のフォーマット設定

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -15,4 +15,9 @@ ja:
   user_sessions:
     new:
       title: 'ログイン'
+  time:
+    formats:
+      default: "%Y年%m月%d日(%a) %H時%M分%S秒 %z"
+      long: "%Y/%m/%d %H:%M"
+      short: "%m/%d %H:%M"
       
