--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -3,10 +3,13 @@ ja:
     login: 'ログイン'
     register: 'ユーザー登録'
     logout: 'ログアウト'
+  category:
     Engineer: 'エンジニア'
-    Gamer: 'ゲーマー'
-    Video Creator: '動画系クリエイター'
-    Writer: 'ライター'
+    Media Creator: 'メディアクリエイター'
+    Writer: 'ライター / エディター'
+    Designer: 'デザイナー / イラストレーター'
+    Director: 'ディレクター / マーケター'
+    Other: 'その他'
   top:
     index:
       New Arrival: '新着'
