--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -15,6 +15,9 @@ ja:
         description: '自己紹介'
         image: 'プロフィール画像'
         role: 'タイプ'
+      post:
+        body: 本文
+        categories: カテゴリー
   users:
     create:
       success: 'ユーザー登録しました'
