Add: simple＿forｍの翻訳ファイルを追加

--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -16,8 +16,7 @@ ja:
         image: 'プロフィール画像'
         role: 'タイプ'
       post:
-        body: 本文
-        categories: カテゴリー
+        body: '本文'
   users:
     create:
       success: 'ユーザー登録しました'
