Fix: localesファイルの修正とテスト時にブラウザ非表示設定に修正

--- a/config/locales/activemodel/ja.yml
+++ b/config/locales/activemodel/ja.yml
@@ -2,5 +2,5 @@ ja:
   activemodel:
     attributes:
       posts_form:
-        image: '画像'
-        categories: 'カテゴリー'
+        images: '画像'
+        category_ids: 'カテゴリー'
