--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -24,12 +24,15 @@ ja:
     new:
       title: 'ログイン'
   posts:
+    index:
+      title: '投稿一覧'
     new:
       title: '新規投稿'
     show:
       title: '投稿詳細'
   categories:
     show:
+      title: 'カテゴリー別投稿一覧'
   time:
     formats:
       default: "%Y年%m月%d日(%a) %H時%M分%S秒 %z"
