Add: 削除機能の追加

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -7,6 +7,8 @@ ja:
     message:
       created: "%{item}しました"
       not_created: "%{item}できません"
+      updated: "%{item}を更新しました"
+      not_updated: "%{item}を更新できません"
   category:
     Engineer: 'エンジニア'
     MediaCreator: 'メディアクリエイター'
