--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -9,6 +9,8 @@ ja:
       not_created: "%{item}できません"
       updated: "%{item}を更新しました"
       not_updated: "%{item}を更新できません"
+      deleted: "%{item}を削除しました"
+      not_deleted: "%{item}を削除できません"
   category:
     Engineer: 'エンジニア'
     MediaCreator: 'メディアクリエイター'
