Add: 投稿編集ページの動的タイトルを追加

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -34,6 +34,8 @@ ja:
       title: '新規投稿'
     show:
       title: '投稿詳細'
+    edit:
+      title: '投稿編集'
   categories:
     show:
       title: 'カテゴリー別投稿一覧'
