Add: ページタイトルのための翻訳を追加

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -36,6 +36,10 @@ ja:
       title: '投稿詳細'
     edit:
       title: '投稿編集'
+    likes:
+      title: 'いいねした投稿'
+    bookmarks:
+      title: 'ブックマークした投稿'
   categories:
     show:
       title: 'カテゴリー別投稿一覧'
