Add: 動的タイトルのi18nを追加

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -25,6 +25,8 @@ ja:
   users:
     new:
       title: 'ユーザー登録'
+    show:
+      title: "%{user}のマイページ"
   user_sessions:
     new:
       title: 'ログイン'
