Add: 日付の表示フォーマットを追加

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -54,4 +54,5 @@ ja:
       default: "%Y年%m月%d日(%a) %H時%M分%S秒 %z"
       long: "%Y/%m/%d %H:%M"
       short: "%m/%d %H:%M"
+      simple: "%Y/%m/%d"
       
