Add: 管理者権限がない場合のフラッシュメッセージの日本語訳を追加

--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -2,6 +2,7 @@ ja:
   defaults:
     message:
       require_login: 'ログインしてください'
+      not_authorized: '権限がありません'
   activerecord:
     models:
       user: 'ユーザー'
