Add: 削除ボタンを押したときに表示される確認メッセージの翻訳を追加

--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -3,6 +3,7 @@ ja:
     message:
       require_login: 'ログインしてください'
       not_authorized: '権限がありません'
+      delete_confirm: '削除しますか？'
   activerecord:
     models:
       user: 'ユーザー'
