Add: ユーザー検索部分に関わる翻訳を追加

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -5,6 +5,7 @@ ja:
     logout: 'ログアウト'
     post: '投稿'
     profile: 'プロフィール'
+    unspecified: '指定なし'
     message:
       created: "%{item}しました"
       not_created: "%{item}できません"
