Fix: マイページのレイアウトを修正

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -5,6 +5,8 @@ ja:
     logout: 'ログアウト'
     post: '投稿'
     profile: 'プロフィール'
+    like: 'いいね'
+    bookmark: 'ブックマーク'
     unspecified: '指定なし'
     message:
       created: "%{item}しました"
