--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -31,6 +31,7 @@ ja:
       item:
         item_code: '商品コード'
         name: '商品名'
+        maker: 'メーカー'
         price: '価格'
         image: '商品画像'
         rakuten_url: '楽天URL'
