Add: いいね数の表示を追加／視認性向上のため編集削除ボタンをドロップダウンに変更

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -9,6 +9,8 @@ ja:
     bookmark: 'ブックマーク'
     unspecified: '指定なし'
     back: '戻る'
+    edit: '編集'
+    delete: '削除'
     message:
       created: "%{item}しました"
       not_created: "%{item}できません"
