Add: トップページにカテゴリーリンク、アプリの説明を追加

--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -21,7 +21,7 @@ ja:
   category:
     Engineer: 'エンジニア'
     MediaCreator: 'メディアクリエイター'
-    Writer: 'ライター / エディター'
+    Writer: 'ライター / イラストレーター'
     Designer: 'デザイナー / イラストレーター'
     Director: 'ディレクター / マーケター'
     Other: 'その他'
