--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -18,6 +18,8 @@ ja:
       not_updated: "%{item}を更新できません"
       deleted: "%{item}を削除しました"
       not_deleted: "%{item}を削除できません"
+  site:
+    name: 'Buildesk（ビルデスク）'
   category:
     Engineer: 'エンジニア'
     MediaCreator: 'メディアクリエイター'
@@ -27,7 +29,7 @@ ja:
     Other: 'その他'
   top:
     index:
-      og_title: '快適なデスク環境をビルドしよう'
+      og_title: '快適なデスク環境をビルドしよう｜Buildesk'
       og_description: 'Buildesk（ビルデスク）はデスク環境に特化した写真投稿サービスです。みんなのデスクを参考にして、リモートワークの生産性アップにつなげよう。'
       New Arrival: '新着'
     user_policy: 
@@ -39,7 +41,7 @@ ja:
       title: 'ユーザー登録'
     show:
       title: "%{user}のデスク環境"
-      og_title: "%{user}のデスク＆アイテム集"
+      og_title: "%{user}のデスク＆アイテム集｜Buildesk"
     non_user:
       title: 'ユーザーが存在しません'
       Please enter the correct account name: '@正しいアカウント名を入力してください'
@@ -49,12 +51,12 @@ ja:
   posts:
     index:
       title: '投稿一覧'
-      og_title: '最新のデスク写真を一気見！'
+      og_title: '最新のデスク写真を一気見！｜Buildesk'
     new:
       title: '新規投稿'
     show:
       title: '投稿詳細'
-      og_title: "%{user}さんのデスク環境｜%{data}"
+      og_title: "%{user}さんのデスク環境｜%{data}｜Buildesk"
       og_description: ''
     edit:
       title: '投稿編集'
@@ -65,14 +67,14 @@ ja:
   categories:
     show:
       title: 'カテゴリー別投稿一覧'
-      og_title: '%{category}のデスク一覧'
+      og_title: '%{category}のデスク一覧｜Buildesk'
   profiles:
     edit:
       title: 'プロフィール編集'
   items:
     show:
       title: 'アイテム詳細'
-      og_title: '%{item}'
+      og_title: '%{item}｜Buildesk'
   public_pages:
     404:
       404 Not Found: 'お探しのページは見つかりませんでした。'
